--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
   },
   "main": "server/index.js",
   "scripts": {},
-  "main": "index.js",
   "repository": "git@github.com:noriaki/nextjs-micro-mongoose-authentication-boilerplate.git",
   "author": {
     "name": "Noriaki Uchiyama",
     "email": "uchiyama.noriaki@gmail.com",
     "url": "https://github.com/noriaki"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-eslint": "^8.2.5",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-react": "^7.10.0"
+  }
 }
