--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "url": "https://github.com/noriaki"
   },
   "license": "MIT",
+  "dependencies": {
+    "next": "^6.1.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
     "eslint": "^4.19.1",
