--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "node": "10.x.x"
   },
   "main": "server/index.js",
-  "scripts": {},
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "repository": "git@github.com:noriaki/nextjs-micro-mongoose-authentication-boilerplate.git",
   "author": {
     "name": "Noriaki Uchiyama",
