--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "micro": "^9.3.2",
     "microrouter": "^3.1.3",
+    "mongoose": "^5.2.2",
     "next": "^6.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
