--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "server/index.js",
   "scripts": {
+    "test": "NODE_ENV=test jest",
     "dev": "micro-dev --watch server",
     "build": "next build",
     "start": "NODE_ENV=production micro"
@@ -28,12 +29,16 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.54",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.4.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "jest": "^23.4.1",
     "micro-dev": "^3.0.0"
   }
 }
