--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "micro": "^9.3.2",
-    "microrouter": "^3.1.3",
+    "microrouter": "^2.2.3",
     "mongoose": "^5.2.2",
     "next": "^6.1.1",
     "prop-types": "^15.6.2",
@@ -39,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
     "jest": "^23.4.1",
-    "micro-dev": "^3.0.0"
+    "micro-dev": "^3.0.0",
+    "microrouter-test-server": "^1.0.3"
   }
 }
