fix typo renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "configbase",
+    "config:base",
     ":pinAllExceptPeerDependencies",
     ":timezone(Asia/Tokyo)",
     ":automergePatch"
