--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,6 @@
     ":pinAllExceptPeerDependencies",
     ":timezone(Asia/Tokyo)",
     ":automergePatch"
-  ]
+  ],
+  "schedule": "before 8am on Monday"
 }
